# flowmeter

./: .gitignore  README.md  analysis.ipynb  main.cpp  sx126x.lib  sx12xx_hal.lib
data/: capture_7.8_no_cap.csv  capture_cumulative_10_3.csv  capture_cumulative_14_4.csv  capture_cumulative_8_3.csv  capture_mcu_input.csv  capture_psu_sweep.csv  noise_10v.jsonl  noise_11v.jsonl  noise_7v.jsonl  noise_8v.jsonl  noise_9v.jsonl  video.jsonl
data/samples/: capture_7_5.csv  capture_7_8.csv  capture_8_0.csv  capture_8_3.csv  capture_8_5.csv  capture_8_7.csv  capture_9_0.csv  capture_9_3.csv  capture_9_5.csv  capture_9_8.csv
data/samples_esp/: test_10_2.jsonl  test_6_6.jsonl  test_7_8.jsonl  test_8_1.jsonl  test_9_0.jsonl  test_9_9.jsonl
data/samples_horizontal/: r_sample_10_0.jsonl  r_sample_6_9.jsonl  r_sample_7_8.jsonl  (+2 more)
esp32_firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_firmware/main/: CMakeLists.txt  flowmeter_main.c
esp32_firmware/main/flow_estimation/: circular_buffer.h  messages.c  messages.h
esp32_firmware/main/transmit/: transmit.c  transmit.h
flowmeter_pcb/: flowmeter.kicad_pcb  flowmeter.kicad_pro  flowmeter.kicad_sch  fp-lib-table  hydro_small.kicad_mod
gateway/: CMakeLists.txt  sdkconfig
mbed_firmware/: main.cpp
pcb/: .gitignore  flowmeter.kicad_dru  flowmeter.kicad_pcb  hydro.kicad_mod  small_zed_logo.kicad_mod  water.kicad_mod  water_small.kicad_mod  zed_logo.kicad_mod
src/: CharCircularBuffer.h  config.h  ina219.h  master.cpp  master.h  slave.cpp  slave.h  transmit.cpp
stm32f4_firmware/: INA219.lib  mbed_app.json
(+27 files in other folders)
